# monad-sample-code

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.ja.md  README.md  rust.rs
.github/workflows/: ci.yml
benches/: pipeline_bench.rs
examples/: basic.rs
src/: domain.rs  lib.rs  logging.rs  main.rs  pipeline.rs  validation.rs
src /: main.rs
tests/: integration_cli.rs  integration_lib.rs
tests/data/: users.csv
