[package]
name = "monadic-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"
criterion = "0.5"

[features]
default = ["human-logs"]
human-logs = []
json-logs = []
